<?xml version="1.0"?>
<package format="2">
    <name>rosnode</name>
    <version>2.0.0</version>
    <description>The ros package</description>
    <maintainer email="zwb@trunk.tech">zwb</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>gnss_msgs</depend>

</package>